tests/fail/division_by_zero.kr
# Test: Division by zero
# Expected: Error: Cannot divide by zero

set x to 10
set y to 0
print x divided by y

